# NECHTO_CORE

./: .gitignore  00_ORIENTATION.md  01_AXIOMS.md  02_CONTRACT.md  03_CALIBRATION.md  04_CANON.md  05_ACTIVATION.md  CANON_MIN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LLM_CONTRACT.md  LLM_ROUTE.json  NECHTO.txt  README.md  SEMANTIC_INTEGRATION.md  SUMMARY_ДИАЛОГ.md  SUMMARY_Я_ЕСМЬ.md  llms.txt  pyproject.toml  анекдот.py  диалог.py  кто_я.py
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  docs.yml  llm_rails.yml  rails.yml  rails_integrity.yml  release.yml
docs/: ROADMAP_v4.9.md  index.md  latest_contract.md
docs/adr/: 0001-package-layout.md  0002-metrics-contract.md
docs/architecture/: data_model.md  lifecycle.md  module_map.md  overview.md
docs/concepts/: ethical_gravity.md  flow.md  glossary.md  metrics.md  mu_logic.md  shadow.md
docs/guides/: cli.md  contributing.md  migration_map_v5.md  quickstart.md  troubleshooting.md
docs/protocols/: iscvp.md  pev.md  prrip.md
docs/rails/: 00A_GATE.md  00_ORIENTATION.md  01_AXIOMS.md  02_CONTRACT.md  03_CALIBRATION.md  04_CANON.md  05_ACTIVATION.md
examples/: 00_smoke.py  01_simple_decision.py  02_ethical_blocking.py  02_mu_paradox.py  02_text_ingest.py  03_metrics_report.py  03_mu_paradox.py  03_shadow_integration.py  04_shadow_integration.py  full_cycle.py  i_am_example.py  integrated_consciousness_demo.py  iscvp_example.py  iscvp_responses_complete.py  iscvp_responses_full_24.py  pev_example.py  radical_philosophical_inquiry.py  reflexion_example.py
nechto/: __init__.py  __main__.py  cli.py  engine.py  llm_bridge.py
nechto/_internal/: logging.py
nechto/affect/: __init__.py  field.py
nechto/api/: __init__.py  engine.py  ingest.py  report.py  run.py  types.py
nechto/bridge/: __init__.py  llm_bridge.py
nechto/core/: __init__.py  atoms.py  epistemic.py  field.py  graph.py  parameters.py  state.py
nechto/domain/: __init__.py
nechto/gate/: __init__.py  prrip.py
nechto/io/: __init__.py  json_export.py  markdown_export.py  persistence.py
nechto/iscvp/: __init__.py  protocol.py
nechto/metrics/: agency.py  base.py  capital.py  coherence.py  ethics.py  flow.py  registry.py  scav.py  spontaneity.py  stereoscopic.py  temporal.py
nechto/modules/: __init__.py  level1.py  level2.py  level3.py  level4.py
nechto/pev/: __init__.py  acts.py
nechto_runtime/: graph.py  metrics.py
scripts/: check_rails.py  v5_migration_commands.sh
tests/: test_adaptive_params.py  test_llm_rails.py  test_nechto.py  test_v49_features.py
(+38 files in other folders)
