[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nechto"
version = "4.8.0"
description = "NECHTO CORE v4.8 — Reflexive Stereoscopic Executable Synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nechto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
