[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nechto"
version = "4.9.0"
description = "NECHTO CORE v4.9 — Reflexive Stereoscopic Executable Synthesis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "NECHTO Contributors" },
]
keywords = ["ai", "semantic-engine", "workflow", "llm", "epistemic-honesty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[project.urls]
Homepage = "https://github.com/your-org/NECHTO_CORE"
Issues = "https://github.com/your-org/NECHTO_CORE/issues"
Documentation = "https://github.com/your-org/NECHTO_CORE/tree/main/docs"

[project.scripts]
nechto = "nechto.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nechto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
